restyle login button and fix spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,7 +26,6 @@ $gray-medium-light: #eaeaea;
 }
 
 html, body {
-  /*padding-bottom: 20px;*/
   background-color: #333;
   background-size: cover;
 }
@@ -37,7 +36,6 @@ html, body {
   padding-right: 150px;
   font-size: 1.2em;
   text-align: center;
-
 }
 
 .container-main a:hover{
@@ -56,8 +54,6 @@ html, body {
 
 .navbar ul {
   padding-left: 100px;
-  /*padding-top: 5px;*/
-  /*padding-bottom: 5px;*/
 }
 
 .navbar ul li a {
@@ -171,7 +167,7 @@ p {
   border: 4px solid rgba(255, 255, 255, 1);
   color: white;
   background-color: #315481;
-  border-radius: 10px;
+  border-radius: 0px;
 }
 .btn-sm{
    outline: none;
